aks.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksdemo
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aksdemo
  template:
    metadata:
      labels:
        app: aksdemo
    spec:
      containers:
        - name: aksdemo
          image: satacr.azurecr.io/sat/azcontainerconnector:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: myacrsecret
