aks.loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: aksdemo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: aksdemo
