aks.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: aksdemo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aks-demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aksdemo
            port:
              number: 80
